--- a/HTML/HTML.html
+++ b/HTML/HTML.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     <h1>Hello There</h1>
+    <h2>How are you</h2>
+    <h3>Bye</h3>
+    <h4>Bye</h4>
+    <h5>Bye</h5>
 </body>
 </html>
