--- a/HTML/HTML.html
+++ b/HTML/HTML.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mern_Restart</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 <body>
+    <!-- The first cocde blocks -->
     <h1>Hello There</h1>
     <h2>How are you</h2>
-    <h3>Bye</h3>
-    <h4>Bye</h4>
-    <h5>Bye</h5>
+   <h1>This is our first website</h1>
+
+    
 </body>
 </html>
