--- a/HTML/basic_tag.html
+++ b/HTML/basic_tag.html
@@ -53,5 +53,54 @@
         </tr>
     </table>
 
+    <h2>List</h2>
+    <ul type="square">
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+    </ul>
+    <ol type="A">
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+    </ol>
+    <dl>
+        <dt>Item 1</dt>
+        <dd>Description of item 1</dd>
+        <dt>Item 2</dt>
+        <dd>Description of item 2</dd>
+    </dl>
+
+    <h2>Form</h2>
+    <label>User Name</label>
+    <input type="text">
+    <br>
+    <label>Password</label>
+    <input type="password">
+    <br>
+    <label>Gender</label>
+    <input type="radio" name="gender" value="male">Male
+    <input type="radio" name="gender" value="female">Female
+    <br>
+    <label>Age</label>
+    <input type="number" min="18" max="60">
+    <br>
+    <label>Email</label>
+    <input type="email">
+    <br>
+    <input type="checkbox" name="color" value="Blue">Blue
+    <input type="checkbox" name="color" value="Red">Red
+    <br>
+    <select>
+        <option>Choose City</option>
+        <option>Dhaka City</option>
+        <option>Comilla City</option>
+        <option>Rangpur City</option>
+    </select>
+    <br><br>
+    <button>Submit</button>
+    <br>
+    <img src="lookove_Qr_code (1).png" alt="qr code of lookove">
+
 </body>
 </html>
