--- a/HTML/lookveqr/index.html
+++ b/HTML/lookveqr/index.html
@@ -7,81 +7,119 @@
     <title>LOOKOVE</title>
     <style>
         body {
-            font-family: sans-serif;
+            font-family: 'Arial', sans-serif;
             margin: 0;
             display: flex;
             justify-content: center;
             align-items: center;
             min-height: 100vh;
-            background-color: #f0f0f0;
+            background: linear-gradient(135deg, #6a11cb, #2575fc);
+            color: #fff;
         }
 
         .container {
             text-align: center;
-            padding: 80px;
-            background-color: #fff;
-            border-radius: 5px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+            padding: 50px;
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 15px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
+            backdrop-filter: blur(10px);
+            width: 90%;
+            max-width: 500px;
+        }
+
+        h1 {
+            font-size: 2.5em;
+            margin-bottom: 20px;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            animation: fadeInDown 1s ease;
+        }
+
+        p {
+            font-size: 1.2em;
+            margin-bottom: 30px;
+            animation: fadeIn 1.5s ease;
         }
 
         .social-links {
             display: flex;
-            flex-direction: column; /* Stack icons vertically */
-            align-items: center; /* Center align icons */
-            margin-top: 30px;
+            flex-direction: column;
+            align-items: center;
+            gap: 20px;
         }
 
         .social-link {
-            margin: 15px 0; /* Space between icons */
-            position: relative;
-            display: flex; /* Use flexbox for alignment */
-            align-items: center; /* Center align icon and text */
-            text-decoration: none; /* Remove underline */
-            color: inherit; /* Inherit text color */
-            font-size: 1.2em; /* Increase font size */
-            font-weight: bold; /* Make text bold */
-            transition: color 0.3s ease; /* Smooth color transition */
+            display: flex;
+            align-items: center;
+            text-decoration: none;
+            color: white;
+            font-size: 1.2em;
+            font-weight: bold;
+            transition: transform 0.3s ease, color 0.3s ease;
         }
 
         .social-link img {
-            width: 60px; /* Icon size */
+            width: 60px;
             height: 60px;
+            margin-right: 15px;
             border-radius: 50%;
-            transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out; /* Smooth transition */
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); /* Initial shadow */
-            margin-right: 10px; /* Space between icon and text */
-        }
-
-        .social-link img:hover {
-            transform: scale(1.05); /* Slightly enlarge on hover */
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3); /* Increase shadow on hover */
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
         }
 
         .social-link:hover {
-            color: #56158d; /* Change text color on hover */
+            color: #e7c9ff;
+            transform: translateY(-5px);
         }
 
-        /* Media Queries for Responsive Design */
+        .social-link img:hover {
+            transform: scale(1.1);
+            box-shadow: 0 6px 15px rgba(0, 0, 0, 0.5);
+        }
+
+        footer {
+            margin-top: 20px;
+            font-size: 0.9em;
+            color: rgba(255, 255, 255, 0.8);
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+            }
+            to {
+                opacity: 1;
+            }
+        }
+
+        @keyframes fadeInDown {
+            from {
+                opacity: 0;
+                transform: translateY(-20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
         @media (max-width: 768px) {
             .container {
-                width: 90%; /* Adjust width for smaller screens */
+                padding: 30px;
             }
 
             .social-link img {
-                width: 50px; /* Smaller icons on mobile */
+                width: 50px;
                 height: 50px;
-            }
-
-            .social-link {
-                font-size: 1em; /* Adjust font size for mobile */
             }
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>LOOKOVE</h1>
-        <p>Welcome to LOOKOVE!</p>
+        <h1>Welcome to LOOKOVE</h1>
+        <p>Your Everyday Styling shopping destination!</p>
 
         <div class="social-links">
             <a href="https://www.facebook.com/lookove.store" target="_blank" class="social-link">
@@ -93,10 +131,14 @@
                 Instagram
             </a>
             <a href="https://lookove.com/" target="_blank" class="social-link">
-                <img src="lookove.png" alt="E-commerce">
+                <img src="lookove.png" alt="Shop Now">
                 Shop Now
             </a>
         </div>
+
+        <footer>
+            Follow us to discover exclusive offers and updates!
+        </footer>
     </div>
 </body>
 </html>
