--- a/HTML/basic_tag.html
+++ b/HTML/basic_tag.html
@@ -7,7 +7,7 @@
 </head>
 <body> 
     <!-- these are heading tags -->
-    <h1>Html Heading Tags</h1>
+    <h1 style="color: blue;font-weight: 100;">Html Heading Tags</h1>
     <h2>Html Heading Tags</h2>
     <h3>Html Heading Tags</h3>
     <h4>Html Heading Tags</h4>
@@ -15,7 +15,7 @@
     <h6>Html Heading Tags</h6>
     <!-- paragraph and bold tags -->
     <p><b>This is a paragraph</b>This is a paragraph</p>
-    <p class="text" style="display: block;">This is a paragraph"></p>
+    <p class="text" style="display: block;font-family: 'Courier New', Courier, monospace;">This is a paragraph</p>
     <p><u><i>This is an underline text</i></u></p>
 
     <b>This is a bold text</b><br>
