--- a/HTML/HTML.html
+++ b/HTML/HTML.html
@@ -13,6 +13,8 @@
     <h2>How are you</h2>
    <h1>This is our first website</h1>
 
+   <a href="Html_Links.html">Links</a>
+
     
 </body>
 </html>
