--- a/HTML/Html_Links.html
+++ b/HTML/Html_Links.html
@@ -8,8 +8,10 @@
 <body>
     <a href="https://aust.edu/">AUST</a> <br>
     <a href="HTML.html">Text Formating</a><br>
-    <a href="https://lookove.com/" target="_blank"><img src="lookove o .png" alt="" width="50px"></a>
+    <a href="https://lookove.com/" target="_blank"><img src="lookove o .png" alt="" width="50px"></a> <!--we use width to resize the image<br>-->
     <br>
+
+    <!-- we use mailto: to send email to the user -->
     <a href="mailto:yousufalishafin@gmail.com">Email</a>
 </body>
 </html>
