--- a/HTML/html_class.html
+++ b/HTML/html_class.html
@@ -40,5 +40,7 @@
         <P>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur quidem doloremque labore ut nobis praesentium id reprehenderit in ad nesciunt aut porro qui, ipsa architecto culpa, quae libero expedita quisquam?</P>
         <button>Join Now</button>
     </div>
+
+    <!-- there cant be more than one id with the same name in one html file -->
 </body>
 </html>
