--- a/HTML/forms.html
+++ b/HTML/forms.html
@@ -5,7 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Form</title>
 </head>
+<style>
+    label{
+        display: block;
+    }
+    .form label{
+        display: inline-block;
+        //width: 100px;
+    }
+</style>
 <body>
+    <form action="" class="form">
+        <input type="radio">
+        <label for="">HTML</label>
+        <input type="checkbox">
+        <label for="">HTML</label>
+    </form>
     <form action="">
         <label for="name">Name</label>
         <input type="text" placeholder="Enter your name"><br>
@@ -16,7 +31,7 @@
         <label for="num">Number</label>
         <input type="number"><br>
         <label for="name">Type Text</label>
-        <textarea name="" id=""></textarea>
+        <textarea name="" id=""></textarea><br>
         <input type="submit" value="Submit">
     </form>
 </body>
