--- a/HTML/forms.html
+++ b/HTML/forms.html
@@ -11,7 +11,7 @@
     }
     .form label{
         display: inline-block;
-        //width: 100px;
+        /* width: 100px; */
     }
 </style>
 <body>
