--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,15 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="img/lookove o .png" type="image/x-icon">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
-<style>
-    img{
-        width: 200px;
-    }
-</style>
 <body>
-    <img src="img/lookove o .png" alt="Lookove LOGO" width="200px"> <br>
-    <img src="img/giphy.gif" alt="Love gif" >
+    <img src="img/lookove o .png" alt="Lookove LOGO" width="200px">
+    <!-- <img src="img/giphy.gif" alt="Love gif" > -->
+     <h1>Lookove</h1>
+     <div class="men">
+        <h1>Men's</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati perspiciatis, ea molestiae accusamus maxime dolorem quasi deleniti tempora fugiat necessitatibus?</p>
+     </div>
+     <div class="women">
+        <h1>Womens</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati perspiciatis, ea molestiae accusamus maxime dolorem quasi deleniti tempora fugiat necessitatibus?</p>
+     </div>
+     <div id="genx">
+        <h1>GenX</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati perspiciatis, ea molestiae accusamus maxime dolorem quasi deleniti tempora fugiat necessitatibus?</p>
+     </div>
 </body>
 </html>
