--- a/SIG_HTML/css_Box/index.html
+++ b/SIG_HTML/css_Box/index.html
@@ -38,3 +38,9 @@
 <div class="box box2"> This is another box</div>
 </body>
 </html>
+
+Margin Collasping
+
+When two or more elements are adjacent to each other, the margin of the element with the largest margin will be applied to the other element. This is called margin collapsing.
+<br>
+<br>
