--- a/SIG_HTML/CSS Sizing/index.html
+++ b/SIG_HTML/CSS Sizing/index.html
@@ -39,12 +39,32 @@
         font-size: 1.5rem; 
         /* rem is relative to the root font size */
     }
+    .fcontainer{
+        border: 2px solid black;
+        /* width: 1920px; */
+        width: 80vw;
+        height: 75vh;
+        margin : 23px auto;
+        background-color: lightcoral;
+        box-sizing: border-box;
+        font-size: 16px;
+    }
+    .fcontainer p{
+        padding: 10px;
+        /* font-size: 1.2em;  */
+        /* 1.2 times the default [from the container] font size */
+        font-size: 2rem; 
+        /* rem is relative to the root font size */
+    }
  </style>
  <body>
     <div class="box">
         <h2>This is a Box</h2>
     </div>
     <div class="container">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur libero tempora deleniti iusto doloribus? Quasi voluptatum temporibus dolore laborum omnis tempore totam quae non amet eius nisi, modi vero iusto. Reprehenderit molestias aspernatur harum perferendis, accusamus atque veniam repellat eaque quaerat, dolor sint laboriosam itaque voluptas quod voluptatibus possimus eius consectetur architecto sit repudiandae alias blanditiis?</p>
+    </div>
+    <div class="fcontainer">
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur libero tempora deleniti iusto doloribus? Quasi voluptatum temporibus dolore laborum omnis tempore totam quae non amet eius nisi, modi vero iusto. Reprehenderit molestias aspernatur harum perferendis, accusamus atque veniam repellat eaque quaerat, dolor sint laboriosam itaque voluptas quod voluptatibus possimus eius consectetur architecto sit repudiandae alias blanditiis?</p>
     </div>
  </body>
