--- a/SIG_HTML/CSS Sizing/index.html
+++ b/SIG_HTML/CSS Sizing/index.html
@@ -1,71 +1,102 @@
- <!DOCTYPE html>
- <html lang="en">
- <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS Sizing</title>
- </head>
- <style>
-    *{
-        margin: 0;
-        padding: 0;
+  </head>
+  <style>
+    /* What I understood is:
+    px depends on resolution,
+    vmin and vmax depends on orientation,
+    vh vw are device specific,
+    rem is a multiplier on current value in respective to the root element,
+    em is multiplier on current value,
+    % depends on parent element. */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: Arial;
+      min-height: 100vmin; /* 100% of the minimum of the viewport width and height */
+      min-width: 100vmin; /* 100% of the minimum of the viewport width and height */
     }
-    html{
-        font-size: 10px; /* 1rem = 10px */
+    html {
+      font-size: 10px; /* 1rem = 10px */
     }
-    .box{
-        border: 2px solid black;
-        /* width: 1920px; */
-        width: 80vw; /* 80% of the vw=viewport width */
-        height: 20vh; /* 20% of the vh=viewport height */
-        margin : auto;
-        background-color: lightblue;
-        box-sizing: border-box;
+    .box {
+      border: 2px solid black;
+      /* width: 1920px; */
+      width: 80vw; /* 80% of the vw=viewport width */
+      height: 20vh; /* 20% of the vh=viewport height */
+      margin: auto;
+      background-color: lightblue;
+      box-sizing: border-box;
     }
-    .container{
-        border: 2px solid black;
-        /* width: 1920px; */
-        width: 80vw;
-        height: 75vh;
-        margin : 23px auto;
-        background-color: lightcoral;
-        box-sizing: border-box;
-        font-size: 16px;
+    .container {
+      border: 2px solid black;
+      /* width: 1920px; */
+      width: 80vw;
+      height: 75vh;
+      margin: 23px auto;
+      background-color: lightcoral;
+      box-sizing: border-box;
+      font-size: 16px;
     }
-    .container p{
-        padding: 10px;
-        /* font-size: 1.2em;  */
-        /* 1.2 times the default [from the container] font size */
-        font-size: 1.5rem; 
-        /* rem is relative to the root font size */
+    .container p {
+      padding: 10px;
+      /* font-size: 1.2em;  */
+      /* 1.2 times the default [from the container] font size */
+      font-size: 1.5rem;
+      /* rem is relative to the root font size */
     }
-    .fcontainer{
-        border: 2px solid black;
-        /* width: 1920px; */
-        width: 80vw;
-        height: 75vh;
-        margin : 23px auto;
-        background-color: lightcoral;
-        box-sizing: border-box;
-        font-size: 16px;
+    .fcontainer {
+      border: 2px solid black;
+      /* width: 1920px; */
+      width: 80vw;
+      height: 75vh;
+      margin: 23px auto;
+      background-color: lightcoral;
+      box-sizing: border-box;
+      font-size: 16px;
     }
-    .fcontainer p{
-        padding: 10px;
-        /* font-size: 1.2em;  */
-        /* 1.2 times the default [from the container] font size */
-        font-size: 2rem; 
-        /* rem is relative to the root font size */
+    .fcontainer p {
+      padding: 10px;
+      /* font-size: 1.2em;  */
+      /* 1.2 times the default [from the container] font size */
+      font-size: 2rem;
+      /* rem is relative to the root font size */
     }
- </style>
- <body>
+    /* vmin is the minimum of the viewport width and height */
+    /* 1vmin = 1% of the minimum of the viewport width and height */
+    /* vmax is the maximum of the viewport width and height */
+    /* */
+  </style>
+  <body>
     <div class="box">
-        <h2>This is a Box</h2>
+      <h2>This is a Box</h2>
     </div>
     <div class="container">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur libero tempora deleniti iusto doloribus? Quasi voluptatum temporibus dolore laborum omnis tempore totam quae non amet eius nisi, modi vero iusto. Reprehenderit molestias aspernatur harum perferendis, accusamus atque veniam repellat eaque quaerat, dolor sint laboriosam itaque voluptas quod voluptatibus possimus eius consectetur architecto sit repudiandae alias blanditiis?</p>
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur libero
+        tempora deleniti iusto doloribus? Quasi voluptatum temporibus dolore
+        laborum omnis tempore totam quae non amet eius nisi, modi vero iusto.
+        Reprehenderit molestias aspernatur harum perferendis, accusamus atque
+        veniam repellat eaque quaerat, dolor sint laboriosam itaque voluptas
+        quod voluptatibus possimus eius consectetur architecto sit repudiandae
+        alias blanditiis?
+      </p>
     </div>
     <div class="fcontainer">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur libero tempora deleniti iusto doloribus? Quasi voluptatum temporibus dolore laborum omnis tempore totam quae non amet eius nisi, modi vero iusto. Reprehenderit molestias aspernatur harum perferendis, accusamus atque veniam repellat eaque quaerat, dolor sint laboriosam itaque voluptas quod voluptatibus possimus eius consectetur architecto sit repudiandae alias blanditiis?</p>
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur libero
+        tempora deleniti iusto doloribus? Quasi voluptatum temporibus dolore
+        laborum omnis tempore totam quae non amet eius nisi, modi vero iusto.
+        Reprehenderit molestias aspernatur harum perferendis, accusamus atque
+        veniam repellat eaque quaerat, dolor sint laboriosam itaque voluptas
+        quod voluptatibus possimus eius consectetur architecto sit repudiandae
+        alias blanditiis?
+      </p>
     </div>
- </body>
- </html>
+  </body>
+</html>
