--- a/SIG_HTML/CSS Display Property/index.html
+++ b/SIG_HTML/CSS Display Property/index.html
@@ -19,10 +19,10 @@
       padding: 20px;
       background-color: lightblue;
     }
-    .box1{
+    /* .box1{
         /* display: none; */
-        /* visibility: hidden; */
-    }
+        /* visibility: hidden; 
+    } */
   </style>
   <body>
     <div class="box">
