--- a/SIG_HTML/CSS Overflow Property/index.html
+++ b/SIG_HTML/CSS Overflow Property/index.html
@@ -14,16 +14,55 @@
         /* overflow: scroll; */
         /* white-space: nowrap; */
         /* overflow: auto; It will hide the scroll bar */
+        margin-bottom: 20px;
     }
     /* .box p{
     text-overflow: ellipsis;
     overflow: hidden;
     } */
+     .side{
+        border: 2px solid black;
+        display: flex;
+     }
+     .one{
+        border: 2px solid black;
+        width: 200px;
+        height: 100px;
+        margin-bottom: 10px;
+        margin: 5px;
+        background-color: saddlebrown;
+     }
+     .two{
+        border: 2px solid black;
+        width: 200px;
+        height: 100px;
+        margin-bottom: 10px;
+        margin: 5px;
+        background-color: rgb(225, 182, 152);
+     }
+     .three{
+        border: 2px solid black;
+        width: 200px;
+        height: 100px;
+        margin: 5px;
+        background-color: blueviolet;
+     }
 </style>
 <body>
     <div class="box">
         <h2>Hello Vaishnav</h2>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt beatae est saepe. Vel, blanditiis consequuntur quo quidem deleniti reprehenderit quae beatae obcaecati culpa? Magnam est reiciendis quae mollitia. Quia eveniet obcaecati ex sapiente! Voluptatum placeat accusamus iste amet nisi magnam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis quo ipsum assumenda corporis in! Maiores molestias corrupti maxime? Facilis, sed rem! Quaerat voluptas inventore adipisci nesciunt ipsa numquam minima officia vitae quis! Repudiandae, quas autem.</p>
+    </div>
+    <div class="side">
+        <div class="one">
+            <h1>One</h1>
+        </div>
+        <div class="two">
+            <h1>two</h1>
+        </div>
+        <div class="three">
+            <h1>three</h1>
+        </div>
     </div>
 </body>
 </html>
