CSS OvrFlow_Property

--- a/SIG_HTML/CSS Overflow Property/index.html
+++ b/SIG_HTML/CSS Overflow Property/index.html
@@ -23,6 +23,7 @@
      .side{
         border: 2px solid black;
         display: flex;
+        margin: 20px;
      }
      .one{
         border: 2px solid black;
