--- a/SIG_HTML/exercise 3/chatgpt.html
+++ b/SIG_HTML/exercise 3/chatgpt.html
@@ -24,9 +24,11 @@
     }
 
     .card-image {
-      width: 100%;
+      width: 90%;
       height: 200px;
       object-fit: cover;
+      display: block;
+        margin: 0 auto;
     }
 
     .card-content {
