--- a/SIG_HTML/css_Variable/index.html
+++ b/SIG_HTML/css_Variable/index.html
@@ -6,9 +6,45 @@
     <title>css_Variable</title>
 </head>
 <style>
-    
+    :root{
+        --color: rgb(105, 217, 86);
+        --seccolor: rgb(191, 131, 248);
+        --text_color: white;
+        --size: 20px;
+    }
+    *{
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+    .nav{
+        background-color: var(--color);
+    }
+    ul{
+        display: flex;
+    }
+    ul li{
+        list-style-type: none;
+        padding: 10px;
+        color: var(--text_color);
+        font-size: var(--size);
+    }
+    .container{
+        background-color: var(--seccolor);
+    }
 </style>
 <body>
-    
+    <div class="nav">
+        <ul>
+            <li>Home</li>
+            <li>About</li>
+            <li>Contact</li>
+            <li>More</li>
+        </ul>
+    </div>
+
+    <div class="container">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum soluta dolor deleniti nulla doloremque voluptas beatae dolore fuga tempore numquam, veniam animi, dolorum repellat! Consequuntur optio alias tempore eos, necessitatibus aut sequi in ullam facilis quibusdam mollitia ab magni porro, nulla nesciunt, qui esse non.
+    </div>
 </body>
 </html>
