--- a/SIG_HTML/css_Variable/index.html
+++ b/SIG_HTML/css_Variable/index.html
@@ -19,6 +19,7 @@
     }
     .nav{
         background-color: var(--color);
+        margin-bottom: 15px;
     }
     ul{
         display: flex;
@@ -31,6 +32,7 @@
     }
     .container{
         background-color: var(--seccolor);
+        padding: 20px;
     }
 </style>
 <body>
