--- a/SIG_HTML/Exercises/exercise 4/index.html
+++ b/SIG_HTML/Exercises/exercise 4/index.html
@@ -14,6 +14,7 @@
                 <li><a href="#">About</a></li>
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Contact</a></li>
+                <li><a href="#">Login</a></li>
             </ul>
         </nav>
     </header>
