--- a/SIG_HTML/CSS Float & Clear/index.html
+++ b/SIG_HTML/CSS Float & Clear/index.html
@@ -23,6 +23,7 @@
     }
 </style>
 <body>
+    <!-- We have to avoid this Float and Clear method because it is not a good practice to use float and clear. It is better to use Flexbox or Grid. -->
     <div class="cards">
         <img src="img1.jpg" alt="Image" width="200" height="200">
         <div class="card">
