--- a/SIG_HTML/CSS Flexbox/index.html
+++ b/SIG_HTML/CSS Flexbox/index.html
@@ -10,34 +10,30 @@
         border: 2px solid green;
         display: flex;
         height: 70vh;
-        /* justify-content: center; */
+        justify-content: center;
         align-items: center;
-        justify-content: space-around; ;
+        /* justify-content: space-around; */
+        flex-direction: column-reverse;
     }
     .item{
-        width: 90px;
-        height: 90px;
+        width: 45px;
+        height: 45px;
         background-color: rgb(180, 0, 180);
         border: 2px solid black;
         margin: 10px;
+        text-align: center;
+        color: white;
     }
 </style>
 <body>
     <div class="container">
-        <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
+        <div class="item">1</div>
+        <div class="item">2</div>
+        <div class="item">3</div>
+        <div class="item">4</div>
+        <div class="item">5</div>
+        <div class="item">6</div>
+
         
     </div>
 </body>
