--- a/webgl/assignment3/20200204037_Assignment_3_A2.html
+++ b/webgl/assignment3/20200204037_Assignment_3_A2.html
@@ -3,11 +3,9 @@
 <title>Assignment 3: Hexagonal Prism</title>
 <canvas id="webglcanvas" width="600" height="600"></canvas>
 <script>
-    // WebGL Context Setup
     const canvas = document.getElementById('webglcanvas');
     const gl = canvas.getContext('webgl');
 
-    // Vertex Shader Source--
     const vertexShaderSource = `
         attribute vec3 a_coords;
         attribute vec3 a_color;
@@ -21,7 +19,6 @@
         }
     `;
 
-    // Fragment Shader Source
     const fragmentShaderSource = `
         precision mediump float;
         varying vec3 v_color;
@@ -30,7 +27,6 @@
         }
     `;
 
-    // Compile Shaders and Link Program
     const vsh = gl.createShader(gl.VERTEX_SHADER);
     gl.shaderSource(vsh, vertexShaderSource);
     gl.compileShader(vsh);
@@ -45,53 +41,47 @@
     gl.linkProgram(prog);
     gl.useProgram(prog);
 
-    // Define Hexagon Vertices (Top at z=0.5, Bottom at z=-0.5)
     const vertices = [];
     const colors = [];
     const numSides = 6;
     const radius = 0.5;
 
-    // Generate Top Hexagon (z=0.5) - Red
     for (let i = 0; i < numSides; i++) {
         const angle = (i * 2 * Math.PI) / numSides;
         const x = radius * Math.cos(angle);
         const y = radius * Math.sin(angle);
         vertices.push(x, y, 0.5);
-        colors.push(1.0, 0.0, 0.0); // Red for top face
+        colors.push(0.0, 1.0, 0.0);
     }
 
-    // Generate Bottom Hexagon (z=-0.5) - Green
     for (let i = 0; i < numSides; i++) {
         const angle = (i * 2 * Math.PI) / numSides;
         const x = radius * Math.cos(angle);
         const y = radius * Math.sin(angle);
         vertices.push(x, y, -0.5);
-        colors.push(0.0, 1.0, 0.0); // Green for bottom face
+        colors.push(0.0, 1.0, 0.0);
     }
 
-    // Generate Rectangular Side Faces with Unique Colors
     const sideColors = [
-        [0.0, 0.0, 1.0], // Blue
-        [1.0, 1.0, 0.0], // Yellow
-        [1.0, 0.0, 1.0], // Magenta
-        [0.0, 1.0, 1.0], // Cyan
-        [0.5, 0.5, 0.5], // Gray
-        [0.8, 0.2, 0.4]  // Pink
+        [0.0, 0.0, 1.0],
+        [1.0, 1.0, 0.0],
+        [1.0, 0.0, 1.0],
+        [0.0, 1.0, 1.0],
+        [0.5, 0.5, 0.5],
+        [0.8, 0.2, 0.4]
     ];
+
     for (let i = 0; i < numSides; i++) {
         const next = (i + 1) % numSides;
-        // Add vertices for two triangles per face
         vertices.push(
-            vertices[i * 3], vertices[i * 3 + 1], 0.5,          // Top current
-            vertices[next * 3], vertices[next * 3 + 1], 0.5,    // Top next
-            vertices[next * 3 + numSides * 3], vertices[next * 3 + 1 + numSides * 3], -0.5, // Bottom next
-            vertices[i * 3 + numSides * 3], vertices[i * 3 + 1 + numSides * 3], -0.5        // Bottom current
+            vertices[i * 3], vertices[i * 3 + 1], 0.5,
+            vertices[next * 3], vertices[next * 3 + 1], 0.5,
+            vertices[next * 3 + numSides * 3], vertices[next * 3 + 1 + numSides * 3], -0.5,
+            vertices[i * 3 + numSides * 3], vertices[i * 3 + 1 + numSides * 3], -0.5
         );
-        // Assign unique color to each face
         colors.push(...sideColors[i], ...sideColors[i], ...sideColors[i], ...sideColors[i]);
     }
 
-    // Buffer Setup
     const vertexBuffer = gl.createBuffer();
     gl.bindBuffer(gl.ARRAY_BUFFER, vertexBuffer);
     gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(vertices), gl.STATIC_DRAW);
@@ -100,18 +90,14 @@
     gl.bindBuffer(gl.ARRAY_BUFFER, colorBuffer);
     gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(colors), gl.STATIC_DRAW);
 
-    // Index Buffer for Faces (Triangles)
     const indices = [];
-    // Top Face (6 triangles)
     for (let i = 0; i < numSides; i++) {
         indices.push(0, i, (i + 1) % numSides);
     }
-    // Bottom Face (6 triangles)
     for (let i = 0; i < numSides; i++) {
         indices.push(numSides, numSides + i, numSides + ((i + 1) % numSides));
     }
-    // Side Faces (12 triangles)
-    const baseIndex = 2 * numSides; // Offset after top/bottom vertices
+    const baseIndex = 2 * numSides;
     for (let i = 0; i < numSides; i++) {
         const offset = baseIndex + i * 4;
         indices.push(offset, offset + 1, offset + 2);
@@ -122,7 +108,6 @@
     gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, indexBuffer);
     gl.bufferData(gl.ELEMENT_ARRAY_BUFFER, new Uint16Array(indices), gl.STATIC_DRAW);
 
-    // Attribute Locations
     const a_coords = gl.getAttribLocation(prog, 'a_coords');
     gl.bindBuffer(gl.ARRAY_BUFFER, vertexBuffer);
     gl.vertexAttribPointer(a_coords, 3, gl.FLOAT, false, 0, 0);
@@ -133,16 +118,13 @@
     gl.vertexAttribPointer(a_color, 3, gl.FLOAT, false, 0, 0);
     gl.enableVertexAttribArray(a_color);
 
-    // Uniform Locations
     const u_rotX = gl.getUniformLocation(prog, 'u_rotX');
     const u_rotY = gl.getUniformLocation(prog, 'u_rotY');
     const u_scale = gl.getUniformLocation(prog, 'u_scale');
 
-    // Initial Transformations
     let rotX = 0, rotY = 0, scale = 1.0;
 
     function updateTransformations() {
-        // Rotation Matrices
         const radX = rotX * Math.PI / 180;
         const rotXMat = new Float32Array([
             1, 0, 0, 0,
@@ -159,7 +141,6 @@
             0, 0, 0, 1
         ]);
 
-        // Scale Matrix
         const scaleMat = new Float32Array([
             scale, 0, 0, 0,
             0, scale, 0, 0,
@@ -172,13 +153,12 @@
         gl.uniformMatrix4fv(u_scale, false, scaleMat);
     }
 
-    // Key Event Listeners
     document.addEventListener('keydown', (e) => {
         switch (e.key.toLowerCase()) {
-            case 'a': rotY -= 5; break;  // Y-axis -
-            case 's': rotY += 5; break;  // Y-axis +
-            case 'w': rotX -= 5; break;  // X-axis -
-            case 'z': rotX += 5; break;  // X-axis +
+            case 'a': rotY -= 5; break;
+            case 's': rotY += 5; break;
+            case 'w': rotX -= 5; break;
+            case 'z': rotX += 5; break;
             case '+': scale *= 1.1; break;
             case '-': scale *= 0.9; break;
         }
@@ -186,7 +166,6 @@
         draw();
     });
 
-    // Draw Function
     function draw() {
         gl.clearColor(0.9, 0.9, 0.9, 1.0);
         gl.enable(gl.DEPTH_TEST);
@@ -194,7 +173,6 @@
         gl.drawElements(gl.TRIANGLES, indices.length, gl.UNSIGNED_SHORT, 0);
     }
 
-    // Initial Draw
     updateTransformations();
     draw();
 </script>
