--- a/SIG_HTML/CSS Flexbox/index.html
+++ b/SIG_HTML/CSS Flexbox/index.html
@@ -10,14 +10,18 @@
         border: 2px solid green;
         display: flex;
         height: 70vh;
-        justify-content: center;
+        /* justify-content: center; */
         align-items: center;
         /* justify-content: space-around; */
-        flex-direction: column-reverse;
+        /* flex-direction: column-reverse; */
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-content: flex-start;
+        /* there is no justify items in flexbox */
     }
     .item{
-        width: 45px;
-        height: 45px;
+        width: 90px;
+        height: 90px;
         background-color: rgb(180, 0, 180);
         border: 2px solid black;
         margin: 10px;
@@ -27,6 +31,36 @@
 </style>
 <body>
     <div class="container">
+        <div class="item">1</div>
+        <div class="item">2</div>
+        <div class="item">3</div>
+        <div class="item">4</div>
+        <div class="item">5</div>
+        <div class="item">6</div>
+        <div class="item">1</div>
+        <div class="item">2</div>
+        <div class="item">3</div>
+        <div class="item">4</div>
+        <div class="item">5</div>
+        <div class="item">6</div>
+        <div class="item">1</div>
+        <div class="item">2</div>
+        <div class="item">3</div>
+        <div class="item">4</div>
+        <div class="item">5</div>
+        <div class="item">6</div>
+        <div class="item">1</div>
+        <div class="item">2</div>
+        <div class="item">3</div>
+        <div class="item">4</div>
+        <div class="item">5</div>
+        <div class="item">6</div>
+        <div class="item">1</div>
+        <div class="item">2</div>
+        <div class="item">3</div>
+        <div class="item">4</div>
+        <div class="item">5</div>
+        <div class="item">6</div>
         <div class="item">1</div>
         <div class="item">2</div>
         <div class="item">3</div>
