--- a/SIG_HTML/CSS Flexbox/index.html
+++ b/SIG_HTML/CSS Flexbox/index.html
@@ -18,6 +18,8 @@
         flex-wrap: wrap;
         align-content: flex-start;
         /* there is no justify items in flexbox */
+        flex-flow: row wrap;
+        gap: 10px;
     }
     .item{
         width: 90px;
