--- a/SIG_HTML/CSS Flexbox/index.html
+++ b/SIG_HTML/CSS Flexbox/index.html
@@ -16,7 +16,7 @@
         /* flex-direction: column-reverse; */
         flex-direction: row;
         flex-wrap: wrap;
-        align-content: flex-start;
+        /* align-content: flex-start; */
         row-gap: 10px;
         column-gap: 10px;
         /* there is no justify items in flexbox */
