--- a/Projects/love letter2 code/index.html
+++ b/Projects/love letter2 code/index.html
@@ -17,8 +17,8 @@
         <div class="front flap"></div>
         <div class="front pocket"></div>
         <div class="letter">
-          <div class="words line1">To: Crush</div>
-          <div class="words line2">Dear crush, you are so beautiful</div>
+          <div class="words line1">To: Yusha</div>
+          <div class="words line2">Dear love, you are so beautiful</div>
           <div class="words line3">That every time i see you</div>
           <div class="words line4">my world stops,</div>
         </div>
