--- a/SIG_HTML/CSS Grid/index.html
+++ b/SIG_HTML/CSS Grid/index.html
@@ -24,6 +24,7 @@
     .item3 {
         grid-column: 1 / 2;
         grid-row: 1 / 2;
+        /* or we can use grid column and row shorthand */
     }
 </style>
 <body>
