Product_Management_App_v.1

--- a/Projects/product_management/dashboard.html
+++ b/Projects/product_management/dashboard.html
@@ -73,5 +73,7 @@
             });
         });
     </script>
+    <button onclick="window.location.href='php/logout.php'">Logout</button>
+
 </body>
 </html>
